# solvathon

./: .env.backup  .env.example  .gitignore  README.md  context.txt  docker-compose.yml  implementation.md  package-lock.json  package.json  prompt.md  start.ps1  start.sh  turbo.json  ws-test.js
apps/media-server/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/media-server/src/: index.ts
apps/media-server/src/mediasoup/: ingest.ts  transport.ts  workers.ts
apps/media-server/src/redis/: subscriber.ts
apps/media-server/src/signaling/: ws-server.ts
apps/ml-bridge/: .env.example  bridge.py
apps/ml-inference/: .env.example  alert_rules.py  flag_engine.py  pyproject.toml  requirements.txt  run.py
apps/ml-inference/detectsvc/: config.py  main.py  registry.py
apps/ml-inference/detectsvc/accel/: __init__.py  base.py  unified_runner.py
apps/ml-inference/detectsvc/pipeline/: capture.py  infer.py  tracker.py  zones.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/register/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/: AlarmControl.tsx  CameraFeedCard.tsx  CameraModal.tsx  DetectionOverlay.tsx  Navbar.tsx  ZoneEditor.tsx
apps/web/components/providers/: AlertProvider.tsx
apps/web/hooks/: useSFU.ts  useSignaling.ts  useWebcamProducer.ts
apps/web/lib/: auth.ts  ml-interface.ts
apps/web/stores/: alertStore.ts  cameraStore.ts  detectionStore.ts
apps/web/types/: next-auth.d.ts
scripts/: start.sh
(+21 files in other folders)
