[project]
name = "hms-ml-inference"
version = "2.0.0"
description = "ML inference service for HMS — YOLO detection via ultralytics (.pt) and ONNX Runtime (.onnx)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16.0"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["detectsvc*"]
